// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`collapse 1`] = `
"
        <details
          open=!{
            undefined ||
            [].find(link => (
              link === ((this && this.props) || props).currentPage ||
              (((this && this.props) || props).currentPage === process.env.baseURL &&
                link === window.configuration.currentFirstPage.replace('.md', '.html'))
              )
            )
          !}
        >
          <summary className='collapse-summary'>
            <p></p>
          </summary>
      <h1>Title</h1>
<h2>I can contain various combinations of elements.</h2>

      </details>
    "
`;

exports[`collapse 2`] = `
"
        <details
          open=!{
            true ||
            [].find(link => (
              link === ((this && this.props) || props).currentPage ||
              (((this && this.props) || props).currentPage === process.env.baseURL &&
                link === window.configuration.currentFirstPage.replace('.md', '.html'))
              )
            )
          !}
        >
          <summary className='collapse-summary'>
            <p></p>
          </summary>
      <h1>Title</h1>
<h2>I can contain various combinations of elements.</h2>

      </details>
    "
`;

exports[`collapse 3`] = `
"<ul>
<li>

        <details
          open=!{
            false ||
            [].find(link => (
              link === ((this && this.props) || props).currentPage ||
              (((this && this.props) || props).currentPage === process.env.baseURL &&
                link === window.configuration.currentFirstPage.replace('.md', '.html'))
              )
            )
          !}
        >
          <summary className='collapse-summary'>
            <p><a href=\\"./pages/Publishing.md\\">:package: Publishing</a></p>
          </summary>
      <ul>
<li><a href=\\"./pages/Publishing.md#setup-branch\\">Setup</a></li>
<li><a href=\\"./pages/Publishing.md#Continuous-integration\\">Continuous Integration</a>u</li>
</ul>

      </details>
    </li>
</ul>
"
`;
